# openghg_inversions

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  README.md  genindex.html  getting_started.html  getting_started.md  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  search.html  searchindex.js  setup.cfg  tox.ini  toxfile.py
.doctrees/: index.doctree
.doctrees/reference/: modules.doctree  openghg_inversions.array_ops.doctree  openghg_inversions.basis.algorithms.doctree  openghg_inversions.basis.doctree  openghg_inversions.config.config.doctree  openghg_inversions.config.doctree  openghg_inversions.config.paths.doctree  openghg_inversions.config.version.doctree  (+27 more)
.github/: pull_request_template.yaml
docs/: conf.py  getting_started.md  index.rst
hbmcmc/: hbmcmc.py
models/: components.py
openghg_inversions/: __init__.py  analytic_model.py  array_ops.py  basis_functions.py  convert.py  correlated_params.py  covariances.py  data_functions.py  filters.py  get_data.py  inversiondata.py  model_error.py  multisector_model.py  run_inverse_model.py  test_correlated_params.py  utils.py
reference/: modules.html  openghg_inversions.array_ops.html  openghg_inversions.basis.algorithms.html  openghg_inversions.basis.html  openghg_inversions.config.config.html  openghg_inversions.config.html  openghg_inversions.config.paths.html  openghg_inversions.config.version.html  openghg_inversions.convert.html  openghg_inversions.filters.html  openghg_inversions.hbmcmc.components.html  openghg_inversions.hbmcmc.hbmcmc.html  openghg_inversions.hbmcmc.hbmcmc_output.html  openghg_inversions.hbmcmc.hbmcmc_post_process.html  openghg_inversions.hbmcmc.html  openghg_inversions.hbmcmc.inversion_pymc.html  openghg_inversions.hbmcmc.inversionsetup.html  openghg_inversions.hbmcmc.post_process_inputs.html  openghg_inversions.hbmcmc.run_hbmcmc.html  openghg_inversions.html  openghg_inversions.inversion_data.get_data.html  openghg_inversions.inversion_data.getters.html  openghg_inversions.inversion_data.html  openghg_inversions.inversion_data.scenario.html  openghg_inversions.inversion_data.serialise.html  openghg_inversions.model_error.html  openghg_inversions.postprocessing.countries.html  openghg_inversions.postprocessing.diagnostics.html  openghg_inversions.postprocessing.html  openghg_inversions.postprocessing.inversion_output.html  openghg_inversions.postprocessing.make_outputs.html  openghg_inversions.postprocessing.make_paris_outputs.html  openghg_inversions.postprocessing.stats.html  openghg_inversions.postprocessing.utils.html  openghg_inversions.utils.html
scripts/: make_test_store.py
tests/: conftest.py  helpers.py  test_array_ops.py  test_basis_functions.py  test_conftest.py  test_filters.py  test_full_inversion.py  test_get_data.py  test_inversion_setup.py  test_multisector_model.py  test_postprocessing.py  test_utils.py
usage/: getting_started.html  installation.html  usage.html
(+190 files in other folders)
