[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "openghg_inversions"
authors = [{name = "Eric Saboya", email = "eric.saboya@bristol.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["description"]
version = "0.0.1"
dependencies = [
    "pymc",
    "xarray", 
    "pandas",
    "matplotlib",
    "scipy", 
    "numpy",
    "openghg"
]

[project.urls]
Home = "https://github.com/openghg/openghg_inversions"
