[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openghg_inversions"
version = "0.0.3"
authors = [{name = "Eric Saboya", email = "eric.saboya@bristol.ac.uk"}]
maintainers = [{name = "Brendan Murphy", email = "brendan.murphy@bristol.ac.uk"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "OpenGHG Inversions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pymc",
    "xarray", 
    "pandas",
    "matplotlib",
    "scipy", 
    "numpy",
    "openghg"
]

[project.urls]
"Home" = "https://github.com/openghg/openghg_inversions"
"Bug Tracker" = "https://github.com/openghg/openghg_inversions/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
openghg_inversions = ["data/*"]

[tool.black]
line-length = 110
target-version = ["py38", "py39"]
