[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openghg_inversions"
version = "0.4.0"

authors = [{name = "Eric Saboya", email = "eric.saboya@bristol.ac.uk"}]
maintainers = [{name = "Brendan Murphy", email = "brendan.murphy@bristol.ac.uk"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "OpenGHG Inversions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymc",
    "numpyro[cpu]",
    "xarray>=2025.06.0",
    "pandas",
    "matplotlib",
    "scipy", 
    "numpy",
    "openghg",
    "sparse",
    "flox",
    "opt_einsum",
]

[project.urls]
"Home" = "https://github.com/openghg/openghg_inversions"
"Bug Tracker" = "https://github.com/openghg/openghg_inversions/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
openghg_inversions = [
    "data/*",
    "basis/*.nc",
    "basis/algorithms/*.nc", 
    "postprocessing/*.cdl",
    "postprocessing/*.json",
    "hbmcmc/config/*.ini",
    "tutorial/*.ini",
]

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
